--- a/FullStackTests/FullStackTests.xcodeproj/xcshareddata/xcschemes/FullStackTests.xcscheme
+++ b/FullStackTests/FullStackTests.xcodeproj/xcshareddata/xcschemes/FullStackTests.xcscheme
@@ -8,15 +8,15 @@
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "51BBE408273D1AA100DA47CC"
-               BuildableName = "FullStackTests.app"
-               BlueprintName = "FullStackTests"
+               BlueprintIdentifier = "51BBE418273D1AA400DA47CC"
+               BuildableName = "FullStackTestsTests.xctest"
+               BlueprintName = "FullStackTestsTests"
                ReferencedContainer = "container:FullStackTests.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,16 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "51BBE408273D1AA100DA47CC"
-            BuildableName = "FullStackTests.app"
-            BlueprintName = "FullStackTests"
-            ReferencedContainer = "container:FullStackTests.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -67,16 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "51BBE408273D1AA100DA47CC"
-            BuildableName = "FullStackTests.app"
-            BlueprintName = "FullStackTests"
-            ReferencedContainer = "container:FullStackTests.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
